fix: String dates & btreemap
It was unclear why the dates by images btreemap was required. Might just
be a chatgpt bug. This was weird, so it was removed and the dates are
now normalized to jiff datetimes for easier formatting on the output.

A new feature flag was also added to enable running the code in cli mode

--- a/photo-bench-ui/src-tauri/Cargo.toml
+++ b/photo-bench-ui/src-tauri/Cargo.toml
@@ -27,4 +27,4 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 tauri-plugin-dialog = "2"
 tracing-appender = "0.2.3"
 anyhow = { version = "1.0.93", features = ["backtrace"] }
-photo-date-bench = { version = "0.1.0", path = "../../image-processing" }
+photo-date-bench = { version = "0.1.0", path = "../../image-processing", features = ["emit-progress"] }
