--- a/image-processing/Cargo.toml
+++ b/image-processing/Cargo.toml
@@ -17,3 +17,6 @@ threadpool = "1.8.1"
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 walkdir = "2.5.0"
+
+[features]
+emit-progress = []
